<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenAndSaveFiles">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/app_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">
            <TextView
                android:id="@+id/titleOpenAndSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleOpenAndSave"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:textSize="20sp"
                android:textColor="?attr/colorOnSecondary"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tool_bar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/open_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/files_button_style"
                    android:text="@string/open_txt"
                    android:textColor="?attr/colorOnPrimary"
                    android:onClick="onOpenTxtClick"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/files_button_style"
                    android:text="@string/save_txt"
                    android:textColor="?attr/colorOnPrimary"
                    android:onClick="onSaveTxtClick"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/open_csv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/files_button_style"
                    android:text="@string/open_csv"
                    android:textColor="?attr/colorOnPrimary"
                    android:onClick="onOpenCSVClick"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_csv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/files_button_style"
                    android:text="@string/save_csv"
                    android:textColor="?attr/colorOnPrimary"
                    android:onClick="onSaveCSVClick"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/open_json"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/files_button_style"
                    android:text="@string/open_json"
                    android:textColor="?attr/colorOnPrimary"
                    android:onClick="onOpenJsonClick"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_json"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/files_button_style"
                    android:text="@string/save_json"
                    android:textColor="?attr/colorOnPrimary"
                    android:onClick="onSaveJsonClick"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/open_xml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/files_button_style"
                    android:text="@string/open_xml"
                    android:textColor="?attr/colorOnPrimary"
                    android:onClick="onOpenXMLClick"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_xml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginVertical="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/files_button_style"
                    android:text="@string/save_xml"
                    android:textColor="?attr/colorOnPrimary"
                    android:onClick="onSaveXMLClick"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>